# libpgam

./: .gitignore  Makefile.am  README.md  configure  configure.ac
doc/: Doxyfile  Makefile.am  header.html
sql/: Makefile.am  install.sql  install.sql.in
src/: Makefile.am  argmaxmin.c  array.c  distance_metrics.c  local_pg.h  magic.c
tests/: ArrayTestSuite.hpp  Makefile.am  array.sql
